ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  rules:
  - host: guestbook.example.com
    http:
      paths:
      - backend:
          serviceName: guestbook-ui
          servicePort: http
