route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: test
  name: test-argo-route
  annotations:
spec:
  host: bar.com
  path: "/bar"
  port:
    targetPort: 80
  to:
    kind: Service
    name: test
